--- a/2.deep dive css/box model/main.css
+++ b/2.deep dive css/box model/main.css
@@ -14,27 +14,61 @@ body {
     /* display: block; */
 }
 
+.section-title {
+    color: #2ddf5c;
+    text-align: center;
+}
+
+.plan {
+    background-color: #d5ffdc;
+    text-align: center;
+    padding: 16px;
+    margin: 8px;
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    color: black;
+}
+
+.plan--highlighted {
+    background-color: #19b84c;
+    color: white;
+    box-shadow: 2px 2px 2px 2px rgb(255 12 123 / 50%);
+}
+
+.plan__features li {
+    margin: 8px 0;
+}
+
+.plan__title {
+    color: #0e4f1f;
+}
+
+.plan__price {
+    color: #858585;
+}
+
+.plan--highlighted .plan__price {
+    color: white;
+}
+
+.plan__annotation {
+    background: white;
+    color: #19b84c;
+    padding: 8px;
+    box-shadow: 2px 2px 2px 2px rgb(255 12 123 / 50%);
+    border-radius: 8px;
+}
+
+.plan__features {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 #product-overview h1 {
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.main-header {
-    width: 100%;
-    background-color: #2ddf5c;
-    padding: 8px 16px;
-}
-
-.main-header>div {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 90px);
-    vertical-align: middle;
 }
 
 #product-overview2 {
@@ -55,68 +89,45 @@ body {
     font-style: normal;
 }
 
-section {
-    background-color: darkblue;
-    color: white;
-}
-
-body {
-    margin: 0;
-}
-
-.main-nav__items {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.main-nav__item {
-    display: inline-block;
-    margin: 0 16px;
-    list-style: none;
-}
-
-.main-nav__item a {
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    padding: 3px 0;
-}
-
-.main-nav__item a:hover,
-.main-nav__item a:active {
-    color: white;
-    border-bottom: 5px solid white;
-}
-
-
-.main-nav__item a::after {
-    /* content: " (Link)"; */
-    color: red;
-}
-
-.main-header__brand {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-p::first-letter {
-    color: red;
-    font-size: 20px;
-}
-
-.main-nav__item--cta a {
-    color: white;
+#key-features {
     background-color: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
 }
 
-.main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    color: #ff1b68;
-    background-color: white;
-    border: none;
+#key-features .section-title {
+    color: white;
+    margin: 32px;
+}
+
+.key-feature__list {
+    list-style: none;
+    margin: 6px;
+    padding: 18px;
+}
+
+.key-feature {
+    display: inline-block;
+    width: 33%;
+}
+
+.key-feature__description {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-size: 20px;
+    vertical-align: top;
+}
+
+.key-feature__image {
+    background-color: #ffcede;
+    width: 128px;
+    height: 128px;
+    border: 2px solid #424242;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.plan__list {
+    width: 80%;
+    margin: auto;
+    text-align: center;
 }
