--- a/2.deep dive css/box model/packages/style.css
+++ b/2.deep dive css/box model/packages/style.css
@@ -39,3 +39,22 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     border-color: #ff5454;
 }
+
+.background {
+    background: url("../images/plans-background.jpg");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+}
+
+.plan__badge {
+    position: absolute;
+    top: 50px;
+    left: 1202px;
+    margin: 20px;
+    font-size: 12px;
+    color: white;
+    background-color: #ff5454;
+    padding: 8px;
+}
