--- a/2.deep dive css/box model/shared.css
+++ b/2.deep dive css/box model/shared.css
@@ -1,5 +1,12 @@
+html{
+    margin: 30px;
+}
+
 .main-header {
+    top: 0;
+    left: 0;
     width: 100%;
+    position: fixed;
     background-color: #2ddf5c;
     padding: 8px 16px;
 }
